# remote-bootselect

./: .clang-format  .gitignore  Dockerfile  Dockerfile-build  Makefile  README.md  docker-compose-build.yml  docker-compose.yml  entrypoint.sh  flake.nix  meson.build  run-vm.sh
src/: install.sh  remote_bootselect.c  remote_default_util  remote_default_util.c  remote_default_util.h
src/grub/: 00-remote_bootselect  01-remote-bootselect  01_remote_bootselect  99-remote_bootselect_export  remote-bootselect.c  remote_bootselect.c
src/server/: ConfigHandler.cpp  ConfigHandler.hpp  EventHandler.cpp  EventHandler.hpp  MQTTHandler.cpp  MQTTHandler.hpp  RequestHandler.cpp  RequestHandler.hpp  common.cpp  common.h  common.hpp  main.cpp  main.hpp  remote-bootselect-server.c  remote-bootselect-server.h  util.c  util.h
